kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  name: ${K8S_APP_NAME}-deployment
  labels:
    app: ${K8S_APP_NAME}
spec:
  selector:
    matchLabels:
      app: ${K8S_APP_NAME}
  replicas: 1
  template:
    metadata:
      labels:
        app: ${K8S_APP_NAME}
    spec:
      containers:
        - name: ${K8S_APP_NAME}
          image: ${CI_REGISTRY_IMAGE}:stag
          imagePullPolicy: Always
          ports:
            - containerPort: ${K8S_CONTAINER_PORT}
          resources: {}
          volumeMounts:
            - mountPath: /var/www/webcore-2/storage
              name: ${K8S_STORAGES}
      imagePullSecrets:
        - name: docker-registry-intechstudio-new
      restartPolicy: Always
      volumes:
        - name: ${K8S_STORAGES}
          persistentVolumeClaim:
            claimName: ${K8S_STORAGES}
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: ${K8S_APP_NAME}
  labels:
    app: ${K8S_APP_NAME}
spec:
  ports:
    - name: http
      port: ${K8S_SERVICE_PORT}
      targetPort: ${K8S_CONTAINER_PORT}
  selector:
    app: ${K8S_APP_NAME}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: staging
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: ${K8S_APP_NAME}
spec:
  rules:
    - host: ${K8S_APP_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${K8S_APP_NAME}
                port:
                  number: ${K8S_SERVICE_PORT}
  tls:
    - hosts:
        - ${K8S_APP_DOMAIN}
      secretName: ${K8S_TLS_SECRET}
